empathy-debugger: rely on gtk_application_add_window() to manage the main loop

We have to old the application while doing async preparation as the app window
is not created right away.

https://bugzilla.gnome.org/show_bug.cgi?id=662504